# freundchen

./: Cargo.toml  README.md  build.sh  run.sh
src/: error.rs  main.rs
src/view/: mod.rs
src/widget/: mod.rs
src/widget/mood/: mod.rs  month_labels.rs  mood_value_labels.rs
